<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <Spinner
        android:id="@+id/profile_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/profile_array"
        android:prompt="@string/profile_prompt"/>
	<View
	  android:layout_width="1dp"
	  android:layout_height="30dp">
	</View>    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
		android:textColor="@android:color/white"
        android:text="@string/start_exercise"
        android:onClick="openWorkout"/> 	
	<View
	  android:layout_width="1dp"
	  android:layout_height="30dp">
	</View>    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_log"
        android:onClick="openIndex"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/running_profiles"
        android:onClick="openProfiles"/>
</LinearLayout>